# wgpu-game-engine

./: .gitignore  Cargo.toml  README.md  shader.json
filesystem/: Cargo.toml  README.md
filesystem/src/: lib.rs  system.rs
filesystem/src/assets/: handle.rs  loader.rs  mod 2.rs  mod.rs
filesystem/tests/: builder.rs  mod.rs  resources.rs
graphics/: Cargo.toml
graphics/src/: lib.rs  pipeline.rs  texture.rs
graphics/src/assets/: mod.rs  shader.rs
graphics/src/shader/: mod.rs  processing.rs
graphics/src/system/: mod.rs  sampler.rs  vertex.rs
graphics/src/system/shader/: mod.rs  processing.rs
src/: app.rs  engine.rs  main.rs  state.rs  vertex.rs  window.rs
src/graphics/: mod.rs  texture.rs
util/src/: lib.rs
