[package]
name = "filesystem"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
notify = "4.0.16"
anyhow = "1.0"
mini-fs = { git = "https://github.com/ifacodes/mini-fs/"}
image = "0.24.2"
crossbeam = "0.8"

[dependencies.uuid]
version = "1.1.2"
features = [
    "v4",
    "fast-rng",
    "macro-diagnostics"
]