[package]
name = "graphics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = { git = "https://github.com/gfx-rs/wgpu" }
winit = "0.27.2"
cgmath = "0.18.0"
anyhow = "1.0"
image = "0.24.2"
filesystem = {path = "../filesystem"}
util = {path = "../util"}
naga = { git = "https://github.com/gfx-rs/naga", features = ["default", "wgsl-in", "wgsl-out"] }
thiserror = "1.0.31"
bytemuck = { version = "1.4.0", features = [ "derive"] }